# ZkNegotiate

./: README.md
agent/: .gitignore  my_agent.ts  package-lock.json  package.json  wallet_data.txt
agent/tools/: index.ts
negotiate/: Cargo.toml
negotiate/src/: lib.rs
negotiate/src/strategy/: negotiate.rs
negotiate_project/host/src/: main.rs
negotiate_project/methods/guest/: Cargo.toml
negotiate_project/methods/guest/src/: main.rs
prover/: .gitignore
prover/program/: Cargo.toml
prover/program/auction/: Cargo.toml
prover/program/auction/elf/: riscv32im-succinct-zkvm-elf
prover/program/auction/program/: Cargo.toml
prover/program/negotiate/elf/: negotiate  riscv32im-succinct-zkvm-elf
prover/program/negotiate/program/: Cargo.toml
prover/program/negotiate/program/src/: main.rs
prover/program/negotiate/script/: Cargo.toml
prover/program/src/: main.rs
prover/script/: build.rs
sp1/: .gitignore
sp1/elf/: riscv32im-succinct-zkvm-elf
sp1/program/: Cargo.toml
sp1/program/src/: main.rs
sp1/program/src/negotiate/: mod.rs
sp1/script/: Cargo.toml
ui/: package-lock.json  package.json
ui/src/app/: config.ts  layout.tsx  page.tsx  providers.tsx
ui/src/app/components/ConnectWalletButton/: index.tsx
ui/src/app/components/ConnectWalletButton/Content/: index.tsx
ui/src/app/components/ConnectWalletButton/No/: index.tsx
ui/src/app/components/DataConstructModal/: TabSteps.tsx  content.tsx  context.tsx  index.tsx
ui/src/app/components/Navbar/: LogoutButton.tsx  index.tsx
ui/src/app/dashboard/: page.tsx
ui/src/app/history/: page.tsx
(+3 files in other folders)
