[package]
version = "0.1.0"
name = "negotiate-script"
edition = "2021"
# default-run = "negotiation"

# [[bin]]
# name = "fibonacci"
# path = "src/bin/main.rs"

# [[bin]]
# name = "evm"
# path = "src/bin/evm.rs"

[dependencies]
sp1-sdk = "3.4.0"
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
tracing = "0.1.40"
hex = "0.4.3"
alloy-sol-types = { workspace = true }
# fibonacci-lib = { path = "../lib" }
serde_json = "1.0.105"

[build-dependencies]
sp1-helper = "3.4.0"
